fixed facts alignment; _html on text-banner headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,6 +686,9 @@ video {
 .gap-12 {
   gap: 3rem;
 }
+.gap-4 {
+  gap: 1rem;
+}
 .gap-6 {
   gap: 1.5rem;
 }
@@ -1121,7 +1124,7 @@ p {
 .featured-text { font-family: "Montserrat", serif;}
 
 .facts-numbers {
-  font-size: 3rem;
+  font-size: 2.6rem;
   line-height: 1;
   font-weight: 800;
   color: var(--featured-color);
