--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ p {
 .featured-text { font-family: "Montserrat", serif;}
 
 .facts-numbers {
-  font-size: 3rem;
+  font-size: 2.6rem;
   line-height: 1;
   font-weight: 800;
   color: var(--featured-color);
